--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -1,8 +1,9 @@
+
 .navbar {
     background-color:#FFFFFF;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     height:54px;
     border: #E5E5E5 1px solid;
@@ -34,7 +35,7 @@
   
   .nav-text {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     padding: 8px 0px 8px 16px;
     list-style: none;
@@ -100,7 +101,7 @@
     width: 100%;
     height: 80px;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
   }
   
