--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -18,6 +18,13 @@
     line-height: 14px;
     color: #182739;
 }
+.Inter500BT {
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 14px;
+    color: #182739;
+}
 .Inter500B {
     font-family: 'Inter';
     font-weight: bold;
@@ -339,3 +346,25 @@ constructed stylesheet
     display: inline-block;
     transition: color 0.3s ease-in-out 0s;
 }
+.gBkpnV {
+    width: 30px;
+    height: 30px;
+    min-width: 30px;
+    min-height: 30px;
+    border-radius: 50%;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    font-size: 12px;
+    line-height: normal;
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+    background-color: rgb(24, 39, 57);
+    box-shadow: 0px 0px 0px 1px;
+}
+.hkWfcR {
+    margin-right: 0px;
+}
+
