--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -135,6 +135,9 @@
 #tableBio:hover {
     cursor: pointer;
 }
+a:hover {
+    cursor: pointer;
+}
 span:hover {
     cursor: pointer;
     color:#9DB9FF;
