Prfile & Bio,Chunk

--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -2,6 +2,10 @@
     width: 100%;
     height: 100%;
   }
+
+.Inter {
+    font-family: 'Inter';
+}
 .Inter400 {
     font-family: 'Inter';
     font-weight: normal;
