--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -381,6 +381,60 @@ constructed stylesheet
     background-color: rgb(24, 39, 57);
     box-shadow: 0px 0px 0px 1px;
 }
+.gBkpnP {
+    width: 30px;
+    height: 30px;
+    min-width: 30px;
+    min-height: 30px;
+    border-radius: 50%;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    font-size: 12px;
+    line-height: normal;
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+    background-color: rgb(14, 255, 175);
+    box-shadow: 0px 0px 0px 1px;
+}
+.gBkpnX {
+    width: 30px;
+    height: 30px;
+    min-width: 30px;
+    min-height: 30px;
+    border-radius: 50%;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    font-size: 12px;
+    line-height: normal;
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+    background-color: rgb(10, 255, 255);
+    box-shadow: 0px 0px 0px 1px;
+}
+.gBkpnZ {
+    width: 30px;
+    height: 30px;
+    min-width: 30px;
+    min-height: 30px;
+    border-radius: 50%;
+    display: inline-flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    font-size: 12px;
+    line-height: normal;
+    font-weight: 500;
+    color: rgb(255, 255, 255);
+    background-color: rgb(7, 115, 248);
+    box-shadow: 0px 0px 0px 1px;
+}
 .hkWfcR {
     margin-right: 0px;
 }
