--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -139,6 +139,9 @@
 #tableBio:hover {
     cursor: pointer;
 }
+.hover {
+    cursor: pointer;   
+}
 a:hover {
     cursor: pointer;
 }
@@ -442,3 +445,50 @@ constructed stylesheet
     max-height: 150px !important;
 }
 
+body {
+  font-family: "Lato", sans-serif;
+}
+
+.sidenav {
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 9.5%;
+  right: 0;
+  background-color: #F4F5F6;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+  padding-left: 5px;
+  -webkit-box-shadow: -4px -1px 10px -4px  rgba(83,94,97,1);
+-moz-box-shadow: -4px -1px 10px -4px rgba(83,94,97,1);
+box-shadow: -4px -1px 10px -4px rgba(83,94,97,1);
+}
+.no-marginTop {
+    top: -9%;
+}
+.sidenav a {
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #818181;
+  display: block;
+  transition: 0.3s;
+}
+
+
+
+.sidenav .closebtn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color:#909090;
+  font-size: 40px;
+  margin-left: 0px;
+}
+
+@media screen and (max-height: 450px) {
+  .sidenav {padding-top: 15px;}
+  .sidenav a {font-size: 18px;}
+}
