--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -200,6 +200,17 @@ constructed stylesheet
     color: rgb(255, 255, 255);
     background-color: rgb(68, 121, 255);
 }
+.btn-infoPrimary {
+    background-color: #0062cc !important;
+}
+.btn-infoBlue {
+    background-color:#51cbce !important;
+}
+.btn:hover, .btn:focus, .btn:active, .btn.active, .btn:active:focus, .btn:active:hover, .btn.active:focus, .btn.active:hover, .show > .btn.dropdown-toggle, .show > .btn.dropdown-toggle:focus, .show > .btn.dropdown-toggle:hover, .navbar .navbar-nav > a.btn:hover, .navbar .navbar-nav > a.btn:focus, .navbar .navbar-nav > a.btn:active, .navbar .navbar-nav > a.btn.active, .navbar .navbar-nav > a.btn:active:focus, .navbar .navbar-nav > a.btn:active:hover, .navbar .navbar-nav > a.btn.active:focus, .navbar .navbar-nav > a.btn.active:hover, .show > .navbar .navbar-nav > a.btn.dropdown-toggle, .show > .navbar .navbar-nav > a.btn.dropdown-toggle:focus, .show > .navbar .navbar-nav > a.btn.dropdown-toggle:hover {
+    background-color: #0062cc !important;
+    color: #FFFFFF !important;
+    box-shadow: none !important;
+}
 /* constructed stylesheet */
  textarea, button, select {
     appearance: none;
