--- a/src/resources/css/main.css
+++ b/src/resources/css/main.css
@@ -175,24 +175,39 @@ th, td {
 }
 
 .column1 {
-  width: 30%;
-  padding-left: 40px;
+  width: 25%;
+  padding-left: 30px;
 }
 
 .column2 {
   width: 25%;
 }
-
 .column3 {
-  width: 22%;
+  width: 25%;
+}
+.column11{
+  width:100%;
+}
+.column21{
+  width:100%
+}
+.column31{
+  width: 100%;
+  padding-left: 300px;
+  text-align: center;
+  float: left;
+}
+td{
+  text-align: left;
 }
 
 .column4 {
-  width: 19%;
+  width: 20%;
 }
 
 .column5 {
-  width: 13%;
+  width: 25%;
+  padding-right: 10%;
 }
 
 .table100-head th {
