--- a/src/assets/scss/paper-dashboard/_footers.scss
+++ b/src/assets/scss/paper-dashboard/_footers.scss
@@ -23,7 +23,7 @@
                 color: inherit;
                 padding: $padding-base-vertical;
                 font-size: $font-size-small;
-                text-transform: uppercase;
+                text-transform: capitalize;
                 text-decoration: none;
 
                 &:hover{
