--- a/src/assets/scss/paper-dashboard/_buttons.scss
+++ b/src/assets/scss/paper-dashboard/_buttons.scss
@@ -4,7 +4,7 @@
     font-weight: $font-weight-semi;
     font-size: $font-size-small;
     line-height: $line-height;
-    text-transform: uppercase;
+    text-transform: capitalize;
     border: none;
     margin: 10px 1px;
     border-radius: $border-radius-small;
@@ -97,11 +97,17 @@
 // Editar aqui los estilos de los botones
 // Apply the mixin to the buttons
 // .btn-default { @include btn-styles($default-color, $default-states-color); }
-.btn-primary { @include btn-styles($primary-color, $primary-states-color); }
-.btn-success { @include btn-styles($success-color, $success-states-color); }
+.btn-primary { @include btn-styles(#3ac0d8, $primary-states-color); }
+.btn-success { @include btn-styles(#3ad88f, $success-states-color); }
+.btn-success-active { @include btn-styles(#3db070, #3db070); }
 .btn-info    { @include btn-styles(#497cff, #497cff); }
+.btn-infoDisabled    { @include btn-styles(#adc4fd, #adc4fd); }
 .btn-warning { @include btn-styles($warning-color, $warning-states-color); }
 .btn-danger  { @include btn-styles(#ff0000, #ff0000); }
+.btn-disabled  { @include btn-styles(#6c6c6c,#6c6c6c); }
+.btn-disabledForce  { @include btn-styles(#c1c1c2, #c1c1c2); }
+.btn-yellow  { @include btn-styles(#ffd200, #ffd200); }
+.btn-yellowDisabled  { @include btn-styles(#fbea97, #fbea97); }
 // .btn-neutral { @include btn-styles($white-color, $white-color); }
 
 .btn-outline-default { @include btn-outline-styles($default-color, $default-states-color); }
