--- a/src/assets/scss/paper-dashboard/_fixed-plugin.scss
+++ b/src/assets/scss/paper-dashboard/_fixed-plugin.scss
@@ -152,7 +152,7 @@
         font-size: 12px;
         font-weight: 600;
         text-align: center;
-        text-transform: uppercase;
+        text-transform: capitalize;
     }
 
     .adjustments-line{
