--- a/src/assets/scss/paper-dashboard/_tables.scss
+++ b/src/assets/scss/paper-dashboard/_tables.scss
@@ -49,7 +49,7 @@
        font-size: 14px;
        font-weight: $font-weight-bold;
        padding-bottom: 0;
-       text-transform: uppercase;
+       text-transform: capitalize;
        border: 0;
    }
 
@@ -112,7 +112,7 @@
 .table-shopping{
     > thead > tr > th{
         font-size: $font-size-h6;
-        text-transform: uppercase;
+        text-transform: capitalize;
     }
     > tbody > tr > td{
         font-size: $font-paragraph;
