--- a/src/resources/css/util.css
+++ b/src/resources/css/util.css
@@ -2233,7 +2233,7 @@
 .text-hov-white:hover {color: white;}
 
 /* ------------------------------------ */
-.text-up {text-transform: uppercase;}
+.text-up {text-transform: capitalize;}
 
 /* ------------------------------------ */
 .text-center {text-align: center;}
