upload,show & delete files contact

--- a/src/styles/GlobalStyles.css
+++ b/src/styles/GlobalStyles.css
@@ -730,3 +730,10 @@ background-color: '#51cbce';
     font-weight: 100 !important;
     font-size: 14px !important;
 }
+
+.btnBeewhite{
+    color:#497CFF !important;
+    font-weight: 100 !important;
+    font-size: 14px !important;
+    background-color: white !important;
+}
